# espin

./: .gitignore  README.md  USER_GUIDE.md  agent.md  espin_gui.py  pyproject.toml
.pi/skills/accessibility-check/: SKILL.md
.pi/skills/accessibility-check/scripts/: check.py
.pi/skills/asr-test/: SKILL.md
.pi/skills/asr-test/scripts/: quick_test.py  test_streaming.py  transcribe.py
.pi/skills/audio-debug/: SKILL.md
.pi/skills/audio-debug/scripts/: list_devices.py  monitor_levels.py  test_capture.py
.pi/skills/integration-test/: SKILL.md
.pi/skills/integration-test/scripts/: run_tests.py  test_basic.py  test_file_cmd.py  test_streaming.py
.pi/skills/text-inject-test/: SKILL.md
.pi/skills/text-inject-test/scripts/: check_permission.py  test_inject.py  test_keys.py  test_stream.py
Casks/: espin.rb
Formula/: espin.rb
espin/: __init__.py  asr.py  audio.py  hotkey.py  injector.py  main.py  stabilizer.py  state.py
espin.app/Contents/: Info.plist
espin.app/Contents/MacOS/: espin
espin.app/Contents/Resources/: espin.icns
